// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serverless.event 1`] = `
{
  "event": {
    "test": "event",
  },
  "ok": true,
}
`;

exports[`serverless.event db context 1`] = `
{
  "test": "db",
}
`;

exports[`serverless.event lambda 1`] = `
{
  "event": {
    "test": "event3",
  },
  "ok": true,
}
`;

exports[`serverless.router 1`] = `
{
  "ok": true,
}
`;

exports[`serverless.router 2`] = `
{
  "event": {
    "test": "event2",
  },
  "ok": true,
}
`;
